tests/baselines/reference/parserMemberFunctionDeclaration1.errors.txt
parserMemberFunctionDeclaration1.ts(2,12): error TS1028: Accessibility modifier already seen.


==== parserMemberFunctionDeclaration1.ts (1 errors) ====
    class C {
        public public Foo() { }
               ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }